// Vitest Snapshot v1

exports[`Divider > Divider baseVue demo works fine 1`] = `
<div
  data-v-589c0842=""
>
  <div
    class="divider-demo__title"
    data-v-589c0842=""
  >
    水平分割线
  </div>
  <div
    class=""
    data-v-589c0842=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--center"
    >
      <div
        class="t-divider__content"
      >
        <!---->
      </div>
    </div>
  </div>
  <div
    class="divider-demo__title"
    data-v-589c0842=""
  >
    带文字水平分割线
  </div>
  <div
    class=""
    data-v-589c0842=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--left"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
  </div>
  <div
    class=""
    data-v-589c0842=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--center"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
  </div>
  <div
    class=""
    data-v-589c0842=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--right"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
  </div>
  <div
    class="divider-demo__title"
    data-v-589c0842=""
    style="margin-bottom: 10px;"
  >
    垂直分割线
  </div>
  <view
    class="divider-wrapper"
    data-v-589c0842=""
  >
    <span
      data-v-589c0842=""
    >
      文字信息
    </span>
    <div
      class="t-divider--vertical-center"
      data-v-589c0842=""
      role="separator"
    >
      <div
        class="t-divider t-divider--vertical t-divider--center"
      >
        <div
          class="t-divider__content"
        >
          <!---->
        </div>
      </div>
    </div>
    <span
      data-v-589c0842=""
    >
      文字信息
    </span>
    <div
      class="t-divider--vertical-center"
      data-v-589c0842=""
      role="separator"
    >
      <div
        class="t-divider t-divider--vertical t-divider--center"
      >
        <div
          class="t-divider__content"
        >
          <!---->
        </div>
      </div>
    </div>
    <span
      data-v-589c0842=""
    >
      文字信息
    </span>
  </view>
</div>
`;

exports[`Divider > Divider mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-bf2b60a0=""
>
  <h1
    class="title"
    data-v-bf2b60a0=""
  >
    Divider 分割符
  </h1>
  <p
    class="summary"
    data-v-bf2b60a0=""
  >
    用于分割、组织、细化有一定逻辑的组织元素内容和页面结构。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-bf2b60a0=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-589c0842=""
        data-v-bf2b60a0=""
      >
        <div
          class="divider-demo__title"
          data-v-589c0842=""
        >
          水平分割线
        </div>
        <div
          class=""
          data-v-589c0842=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--center"
          >
            <div
              class="t-divider__content"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="divider-demo__title"
          data-v-589c0842=""
        >
          带文字水平分割线
        </div>
        <div
          class=""
          data-v-589c0842=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--left"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
        </div>
        <div
          class=""
          data-v-589c0842=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--center"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
        </div>
        <div
          class=""
          data-v-589c0842=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--right"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
        </div>
        <div
          class="divider-demo__title"
          data-v-589c0842=""
          style="margin-bottom: 10px;"
        >
          垂直分割线
        </div>
        <view
          class="divider-wrapper"
          data-v-589c0842=""
        >
          <span
            data-v-589c0842=""
          >
            文字信息
          </span>
          <div
            class="t-divider--vertical-center"
            data-v-589c0842=""
            role="separator"
          >
            <div
              class="t-divider t-divider--vertical t-divider--center"
            >
              <div
                class="t-divider__content"
              >
                <!---->
              </div>
            </div>
          </div>
          <span
            data-v-589c0842=""
          >
            文字信息
          </span>
          <div
            class="t-divider--vertical-center"
            data-v-589c0842=""
            role="separator"
          >
            <div
              class="t-divider t-divider--vertical t-divider--center"
            >
              <div
                class="t-divider__content"
              >
                <!---->
              </div>
            </div>
          </div>
          <span
            data-v-589c0842=""
          >
            文字信息
          </span>
        </view>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-bf2b60a0=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-127b67ab=""
        data-v-bf2b60a0=""
      >
        <div
          class="divider-demo__title"
          data-v-127b67ab=""
        >
          虚线样式
        </div>
        <div
          class=""
          data-v-127b67ab=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
          >
            <div
              class="t-divider__content"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class=""
          data-v-127b67ab=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--left t-divider--dashed"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
        </div>
        <div
          class=""
          data-v-127b67ab=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
        </div>
        <div
          class=""
          data-v-127b67ab=""
          role="separator"
        >
          <div
            class="t-divider t-divider--horizontal t-divider--right t-divider--dashed"
          >
            <div
              class="t-divider__content"
            >
              文字信息
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Divider > Divider themeVue demo works fine 1`] = `
<div
  data-v-127b67ab=""
>
  <div
    class="divider-demo__title"
    data-v-127b67ab=""
  >
    虚线样式
  </div>
  <div
    class=""
    data-v-127b67ab=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
    >
      <div
        class="t-divider__content"
      >
        <!---->
      </div>
    </div>
  </div>
  <div
    class=""
    data-v-127b67ab=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--left t-divider--dashed"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
  </div>
  <div
    class=""
    data-v-127b67ab=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
  </div>
  <div
    class=""
    data-v-127b67ab=""
    role="separator"
  >
    <div
      class="t-divider t-divider--horizontal t-divider--right t-divider--dashed"
    >
      <div
        class="t-divider__content"
      >
        文字信息
      </div>
    </div>
  </div>
</div>
`;
